# 30122-project-wealthspread

./: APIs.py  ESG_Scores.json  README.md  SA_sp500_tickers.json  Wiki_sp500_tickers.json  correlation_matrix.csv  data_visualization_historic performance.py  geometric_mean.json  project_paper.md  pyproject.toml  scaled_geometric_mean.json  stockanalysis_scrape.py  stocks_details.json  wealthspread_cli.py  wiki_sp500_list_scrape.py
correlation/: simulation.py
milestones/: milestone1.md  milestone3.md
scrape/: companyinfo_scrape.py
scratch/: data_visualization_historic_performance.py
stock_data/: AAPL_time_series.csv  ABBV_time_series.csv  ABT_time_series.csv  ACGL_time_series.csv  ACN_time_series.csv  ADBE_time_series.csv  ADM_time_series.csv  ADP_time_series.csv  ADSK_time_series.csv  AEP_time_series.csv  AES_time_series.csv  AFL_time_series.csv  AIG_time_series.csv  ALB_time_series.csv  ALGN_time_series.csv  ALLE_time_series.csv  ALL_time_series.csv  AMAT_time_series.csv  AMD_time_series.csv  AME_time_series.csv  AMGN_time_series.csv  AMP_time_series.csv  AMT_time_series.csv  ANET_time_series.csv  AOS_time_series.csv  APA_time_series.csv  APO_time_series.csv  APTV_time_series.csv  ARE_time_series.csv  AVB_time_series.csv  AVY_time_series.csv  AWK_time_series.csv  AXON_time_series.csv  AXP_time_series.csv  AZO_time_series.csv  BALL_time_series.csv  BA_time_series.csv  BBY_time_series.csv  BF.B_time_series.csv  BG_time_series.csv  (+297 more)
stock_json_cache/: A.json  AAPL.json  ABBV.json  ABNB.json  ABT.json  ACGL.json  ACN.json  ADBE.json  ADI.json  ADM.json  ADP.json  (+493 more)
(+528 files in other folders)
